Add GET /pipeline (arbitrary), extra query args => extra_parameters
